*5714* citation editor: ie7: ie7 does not correctly handle border 0 when border is not collapsed as well.

--- a/styles/grid.css
+++ b/styles/grid.css
@@ -23,6 +23,7 @@ div.grid div.actions {
 
 div.grid table {
 	width: 100%;
+	border-collapse: collapse; /* Required for IE7 to remove table borders. */
 }
 
 div.grid thead tr {
